Remove /networks from API
