# openapi/openapi.json
@@ -14,18 +14,10 @@
     "version": "0.2.0"
   },
   "paths": {
-    "/networks/{network_uid}/peers/{peer_uid}/endpoints": {
+    "/peers/{peer_uid}/endpoints": {
       "get": {
         "operationId": "list_endpoints",
         "parameters": [
-          {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "peer_uid",
             "in": "path",
@@ -52,18 +44,10 @@
         }
       }
     },
-    "/networks/{network_uid}/peers/{peer_uid}/endpoints/{endpoint_uid}": {
+    "/peers/{peer_uid}/endpoints/{endpoint_uid}": {
       "get": {
         "operationId": "read_endpoint",
         "parameters": [
-          {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "peer_uid",
             "in": "path",
@@ -98,14 +82,6 @@
         "operationId": "update_endpoint",
         "parameters": [
           {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
             "name": "peer_uid",
             "in": "path",
             "required": true,
@@ -136,19 +112,9 @@
         }
       }
     },
-    "/networks/{network_uid}/streams": {
+    "/streams": {
       "get": {
         "operationId": "list_streams",
-        "parameters": [
-          {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -166,18 +132,10 @@
         }
       }
     },
-    "/networks/{network_uid}/streams/{stream_uid}": {
+    "/streams/{stream_uid}": {
       "get": {
         "operationId": "read_stream",
         "parameters": [
-          {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "stream_uid",
             "in": "path",
@@ -203,14 +161,6 @@
       "put": {
         "operationId": "update_stream",
         "parameters": [
-          {
-            "name": "network_uid",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "stream_uid",
             "in": "path",
@@ -306,7 +256,6 @@
         "type": "object",
         "required": [
           "endpoint_uri",
-          "network_uid",
           "peer_uid",
           "endpoint_uid",
           "endpoint_type",
@@ -317,9 +266,6 @@
         ],
         "properties": {
           "endpoint_uri": {
-            "type": "string"
-          },
-          "network_uid": {
             "type": "string"
           },
           "peer_uid": {
@@ -357,16 +303,12 @@
         "title": "StreamSpec",
         "required": [
           "stream_uri",
-          "network_uid",
           "stream_uid",
           "source",
           "destination"
         ],
         "properties": {
           "stream_uri": {
-            "type": "string"
-          },
-          "network_uid": {
             "type": "string"
           },
           "stream_uid": {
